--- a/todo-sample/Views/Shared/_Layout.cshtml
+++ b/todo-sample/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.Extensions.Configuration
+@using DotNetCoreSqlDb.Services
+@inject IAppInfoService AppInfoService
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -47,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - My TodoList App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - My TodoList App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> (Version @AppInfoService.Version.Number, @AppInfoService.Version.Date)
         </div>
     </footer>
 
