--- a/todo-sample/Views/Shared/_Layout.cshtml
+++ b/todo-sample/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - My TodoList App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> (Version @AppInfoService.Version.Number, @AppInfoService.Version.Date)
+            &copy; 2020 - My TodoList Sample App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> (Version @AppInfoService.Version.Number, @AppInfoService.Version.Date)
         </div>
     </footer>
 
